--- a/HmGame/Config/DefaultEngine.ini
+++ b/HmGame/Config/DefaultEngine.ini
@@ -72,6 +72,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/HmGame")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/HmGame")
+AssetManagerClassName=/Script/HmGame.HmAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
