--- a/HmGame/Config/DefaultEngine.ini
+++ b/HmGame/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/System/DefaultEditorMap/L_DefaultEditorOverview.L_DefaultEditorOverview
 GlobalDefaultGameMode=/Script/HmGame.HmGameModeBase
 EditorStartupMap=/Game/System/DefaultEditorMap/L_DefaultEditorOverview.L_DefaultEditorOverview
+GameInstanceClass=/Script/HmGame.HmGameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
