Implementation of classes required for cosmetics

--- a/HmGame/HmGame.uproject
+++ b/HmGame/HmGame.uproject
@@ -39,6 +39,14 @@
 		{
 			"Name": "ShooterCore",
 			"Enabled": true
+		},
+		{
+			"Name": "AnimationLocomotionLibrary",
+			"Enabled": true
+		},
+		{
+			"Name": "AnimationWarping",
+			"Enabled": true
 		}
 	]
 }
