Mannequin Spawn and Lyra Animation Migrate

--- a/HmGame/Config/DefaultEngine.ini
+++ b/HmGame/Config/DefaultEngine.ini
@@ -89,3 +89,5 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[CoreRedirects]
++ClassRedirects=(OldName="LyraAnimInstance", NewName="/Script/HmGame.HmAnimInstance")
